k8s/ingress/bike-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bike-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: bike-service.deployment
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bike-service
                port:
                  number: 8080
